# MA_Ros2_Iron_Repo

./: README.md  frames_2024-12-19_15.02.23.gv
install/: local_setup.sh  setup.sh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.11.0
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.11.0  libcollision_detector_fcl_plugin.so.2.11.0  libmoveit_acceleration_filter.so.2.11.0  libmoveit_butterworth_filter.so.2.11.0  libmoveit_collision_detection.so.2.11.0  libmoveit_collision_detection_bullet.so.2.11.0  libmoveit_collision_detection_fcl.so.2.11.0  libmoveit_collision_distance_field.so.2.11.0  libmoveit_constraint_samplers.so.2.11.0  libmoveit_distance_field.so.2.11.0  libmoveit_dynamics_solver.so.2.11.0  libmoveit_exceptions.so.2.11.0  libmoveit_kinematic_constraints.so.2.11.0  libmoveit_kinematics_metrics.so.2.11.0  libmoveit_planning_interface.so.2.11.0  libmoveit_planning_scene.so.2.11.0  libmoveit_robot_model.so.2.11.0  libmoveit_robot_state.so.2.11.0  libmoveit_robot_trajectory.so.2.11.0  libmoveit_ruckig_filter.so.2.11.0  libmoveit_smoothing_base.so.2.11.0  libmoveit_test_utils.so.2.11.0  libmoveit_trajectory_processing.so.2.11.0  libmoveit_transforms.so.2.11.0  libmoveit_utils.so.2.11.0
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.11.0  libmotion_planning_pipeline_plugin.so.2.11.0  libmoveit_global_planner_component.so.2.11.0  libmoveit_hybrid_planning_manager.so.2.11.0  libmoveit_local_planner_component.so.2.11.0  libreplan_invalidated_trajectory_plugin.so.2.11.0  libsimple_sampler_plugin.so.2.11.0  libsingle_plan_execution_plugin.so.2.11.0
install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.11.0  libmoveit_cached_ik_kinematics_plugin.so.2.11.0  libmoveit_srv_kinematics_plugin.so.2.11.0
install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.11.0
install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.11.0  libmoveit_ompl_planner_plugin.so.2.11.0
install/moveit_py/lib/: libmoveit_py_utils.so.
install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.11.0
install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.11.0  libmoveit_ros_control_interface_gripper_plugin.so.2.11.0  libmoveit_ros_control_interface_plugin.so.2.11.0  libmoveit_ros_control_interface_trajectory_plugin.so.2.11.0
install/moveit_ros_move_group/lib/: libmoveit_move_group_capabilities_base.so.2.11.0  libmoveit_move_group_default_capabilities.so.2.11.0
install/moveit_ros_occupancy_map_monitor/lib/: libmoveit_ros_occupancy_map_monitor.so.2.11.0
install/moveit_ros_perception/lib/: libmoveit_depth_image_octomap_updater.so.2.11.0  libmoveit_depth_image_octomap_updater_core.so.2.11.0  libmoveit_lazy_free_space_updater.so.2.11.0  libmoveit_mesh_filter.so.2.11.0  libmoveit_point_containment_filter.so.2.11.0  libmoveit_pointcloud_octomap_updater.so.2.11.0  libmoveit_pointcloud_octomap_updater_core.so.2.11.0  libmoveit_semantic_world.so.2.11.0
install/moveit_ros_planning/lib/: libmoveit_collision_plugin_loader.so.2.11.0  libmoveit_cpp.so.2.11.0  (+12 more)
log/: latest_build
src/common_services_package/: CMakeLists.txt
src/common_services_package/srv/: GetPointCloud2.srv
src/edit_planning_scene/: CMakeLists.txt
src/edit_planning_scene/src/: add_object_to_planning_scene.cpp  octo_map.cpp
src/object_creation/: CMakeLists.txt
src/object_creation/src/: Object_placement.cpp  Object_placement2.cpp  Object_placement3.cpp  Transform_Test.cpp  object_creation.cpp  object_creation.py  test2.cpp  test3.cpp
src/object_detection/: CMakeLists.txt
src/object_detection_pcl/: CMakeLists.txt  package.xml
src/point_cloud_circle_detector/: CMakeLists.txt  package.xml
src/point_cloud_circle_detector/pcd/: 14_cm_Topf.stl  plantpod_lesssamples.pcd
src/point_cloud_circle_detector/src/: cup_pointcloud_segmentation_and_coloring (copy).cpp  cup_pointcloud_segmentation_and_coloring.cpp  cup_segmentation_and_coloring.cpp  hsv_color_filter.cpp  image_based_hsv_color_filter.cpp  plantplot_icp_conversion.cpp  plantplot_placement.cpp  plantplot_placement_service.cpp  plantplot_ransac_conversion.cpp  plantpod_pointcloud_segmentation_and_coloring.cpp  plantpod_pointcloud_segmentation_and_coloring_service.cpp  plantpot_placement_service.cpp  plantpot_pointcloud_segmentation_and_coloring_service.cpp  point_cloud_circle_detector.cpp  point_cloud_custom_plant_pot_detection.cpp  point_cloud_cylinder_detector.cpp  point_cloud_plantpot_edge_pfh_detector.cpp  point_cloud_plantpot_pfh_detector (copy).cpp  point_cloud_plantpot_pfh_detector.cpp  point_cloud_plantpot_ppf_detector.cpp  point_cloud_plantpot_rgb_edge_pfh_detector.cpp  point_cloud_rgb_edge_circle_detector.cpp  rgb_edge_filter.cpp
src/ppf_test_pkg/: CMakeLists.txt
src/ppf_test_pkg/src/: object_detection.cpp
src/ros2_azure_bridge/: package.xml  setup.cfg  setup.py
src/ur3_camera_moveit_config/: CMakeLists.txt
src/ur3_description_controller/: CMakeLists.txt  package.xml
src/ur5_camera_moveit_config/: .setup_assistant  CMakeLists.txt
src/ur5_camera_moveit_config2/: CMakeLists.txt
src/ur5_description_controller/: CMakeLists.txt
src/ur5_moveit_test/: CMakeLists.txt  package.xml
src/ur5_moveit_test/launch/: gripper_close_moveit_test.launch.py  gripper_open_moveit_test.launch.py  ur5_drop_sensor.launch.py  ur5_move_test.launch.py  ur5_move_test2.launch.py  ur5_move_test_object_detection.launch.py  ur5_move_to_camera.launch.py  ur5_move_to_home.launch.py  ur5_pickup_sensor.launch.py
src/ur5_moveit_test/src/: Aufgabenstellung  gripper_close_moveit_test.cpp  gripper_open_moveit_test.cpp  ur5_drop_sensor (copy).cpp  ur5_drop_sensor.cpp  ur5_image_octmap_path (copy).cpp  ur5_image_octmap_path.cpp  ur5_move_plantpot_to_home.cpp  ur5_move_to_camera.cpp  ur5_move_to_home.cpp  ur5_moveit_test.cpp  ur5_moveit_test_launch.cpp  ur5_moveit_test_object_detection (copy).cpp  ur5_moveit_test_object_detection.cpp  ur5_pickup_sensor.cpp  ur5_probe_sensor.cpp  ur5_probe_sensor_service.cpp  ur5_read_positions.cpp
(+1976 files in other folders)
